I think i fixed the ratios from diiferent size screens (tablet and desktop). ALSO i moved the buttons because on mobile they were sometimes covered by the nav bar and I made them kind of overlap the image (kinda cool).

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
 }
 
 .card {
-    padding: 10px;
+    padding: 5px;
 }
 
 #restName {
@@ -31,19 +31,29 @@
     text-align: center;
 
 }
-/* @media screen and (max-width: 1500px) {
+
+#restaurantImage {
+    top: 8px
+}
+
+/* #restaurantImage {
+    height: 400px%;
+    width: 600px;
+} */
+
+@media screen and (min-width: 600px) {
 .card{
     position: relative;
     top: 65px;
-    left: 210px;
+    left: 150px;
 }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (min-width: 900px) {
     .card{
         position: relative;
         top: 65px;
-        left: 0px;
-        right:900px;
+        left: 195px;
     }
-} */
+    }
+
